--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  floor: ^1.3.0
-  image_picker: ^0.8.6
+  cupertino_icons: ^1.0.0
+  # floor: ^1.3.0
+  sqflite: ^2.2.2
+  image_picker: ^0.8.0
+  google_fonts: ^3.0.0
+  path_provider: ^2.0.0
+  # river pod
+  flutter_riverpod: ^2.0.0
+  riverpod_annotation: ^1.0.0
+  uuid: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   floor_generator: ^1.3.0
-  build_runner: ^2.1.2
+  build_runner: ^2.1.0
+  riverpod_generator: ^1.0.0
+  sqflite_common_ffi: ^2.2.0+1
 
 flutter:
   uses-material-design: true
