--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,14 @@ dependencies:
   image_picker: ^0.8.0
   google_fonts: ^3.0.0
   path_provider: ^2.0.0
+  uuid: ^3.0.0
+
   # river pod
   flutter_riverpod: ^2.0.0
   riverpod_annotation: ^1.0.0
-  uuid: ^3.0.0
+
+  #ui
+  flashy_tab_bar2: ^0.0.5
 
 dev_dependencies:
   flutter_test:
