--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
+
+  # Database
   # floor: ^1.3.0
   sqflite: ^2.2.2
   image_picker: ^0.8.0
-  google_fonts: ^3.0.0
   path_provider: ^2.0.0
   uuid: ^3.0.0
 
@@ -22,7 +22,10 @@ dependencies:
   flutter_riverpod: ^2.0.0
   riverpod_annotation: ^1.0.0
 
-  #ui
+  # UI
+  cupertino_icons: ^1.0.0
+  google_fonts: ^3.0.0
+  lottie: ^2.1.0
   flashy_tab_bar2: ^0.0.5
 
 dev_dependencies:
@@ -36,3 +39,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lottie/
