--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_fonts: ^3.0.0
   lottie: ^2.1.0
   flashy_tab_bar2: ^0.0.5
+  fluttertoast: ^8.1.2
+
 
 dev_dependencies:
   flutter_test:
