--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.0 # format DateTime
+  collection: ^1.16.0
 
   # Database
   # floor: ^1.3.0
@@ -30,7 +31,7 @@ dependencies:
   lottie: ^2.1.0
   flashy_tab_bar2: ^0.0.5
   fluttertoast: ^8.1.2
-
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
