--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,15 @@ dev_dependencies:
   build_runner: ^2.1.0
   riverpod_generator: ^1.0.0
   sqflite_common_ffi: ^2.2.0+1
+  flutter_launcher_icons: "^0.11.0"
 
 flutter:
   uses-material-design: true
   assets:
     - assets/lottie/
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icon/icon.png"
