--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
   collection: ^1.16.0
 
   # Database
-  # floor: ^1.3.0
-  sqflite: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^3.0.0
+
+  # General
   image_picker: ^0.8.0
   path_provider: ^2.0.0
-  uuid: ^3.0.0
   path: ^1.8.0
 
   # river pod
@@ -37,11 +39,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  floor_generator: ^1.3.0
   build_runner: ^2.1.0
   riverpod_generator: ^1.0.0
-  sqflite_common_ffi: ^2.2.0+1
   flutter_launcher_icons: "^0.11.0"
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
