--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0 # format DateTime
+  intl: ^0.17.0 # format DateTime
   collection: ^1.16.0
+
+  # i18n
+  flutter_localizations:
+    sdk: flutter
+
 
   # Database
   hive: ^2.2.3
