--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0 # format DateTime
   collection: ^1.16.0
+  package_info_plus: ^3.0.2
 
   # i18n
   flutter_localizations:
@@ -36,10 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_fonts: ^3.0.0
   lottie: ^2.1.0
-  flashy_tab_bar2: ^0.0.5
   fluttertoast: ^8.1.2
   flutter_slidable: ^2.0.0
-  package_info_plus: ^3.0.2
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +53,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/icon/
     - assets/lottie/
     # build info
     - .git/HEAD
