--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  # Image process
+  flutter_image_compress: ^1.1.3
 
   # Database
   hive: ^2.2.3
