mobile,fix: 파일 이동에 따른 git 경로 수정

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -58,9 +58,9 @@ flutter:
     - assets/icon/
     - assets/lottie/
     # build info
-    - .git/HEAD
-    - .git/ORIG_HEAD
-    - .git/refs/heads/
+    - ../.git/HEAD
+    - ../.git/ORIG_HEAD
+    - ../.git/refs/heads/
 
   fonts:
     - family: PoiretOne
