--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   riverpod_annotation: ^1.0.0
 
   # UI
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.0
   google_fonts: ^3.0.0
   lottie: ^2.1.0
