--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -10,16 +10,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0 # format DateTime
-  collection: ^1.16.0
-  package_info_plus: ^3.0.2
+  intl: ^0.18.0 # format DateTime
+  collection: ^1.17.0
+  package_info_plus: ^4.0.1
 
   # i18n
   flutter_localizations:
     sdk: flutter
 
   # Image process
-  flutter_image_compress: ^1.1.3
+  flutter_image_compress: ^2.0.3
 
   # Database
   hive: ^2.2.3
@@ -33,24 +33,24 @@ dependencies:
 
   # river pod
   flutter_riverpod: ^2.0.0
-  riverpod_annotation: ^1.0.0
+  riverpod_annotation: ^2.1.1
 
   # UI
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.0
-  google_fonts: ^3.0.0
+  google_fonts: ^4.0.4
   lottie: ^2.1.0
   fluttertoast: ^8.1.2
-  flutter_slidable: ^2.0.0
-  flutter_svg: ^1.1.6
+  flutter_slidable: ^3.0.0
+  flutter_svg: ^2.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.1.0
-  riverpod_generator: ^1.0.0
-  flutter_launcher_icons: "^0.11.0"
+  riverpod_generator: ^2.2.3
+  flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.0
 
 flutter:
